# kubertree

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  _access.py  _api_actions.py  _api_auth.py  _api_exec.py  _api_inspect.py  _auth.py  _exec.py  _inspect.py  _inventory.py  _k8s_client.py  _metrics.py  _models.py  _nodeops.py  _platform.py  _resources.py  _state.py  _target.py  _tree.py  _workload.py  app.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  proxy-secret.yaml  route.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.md  HELM.md
helm/kubertree/: Chart.yaml  values.schema.json  values.yaml
helm/kubertree/templates/: NOTES.txt  clusterrole.yaml  deployment.yaml  ingress.yaml  (+1 more)
kubertree/: __main__.py  _platform.py  _state.py  main.py
kubertree/api/: _actions.py  _auth.py  _exec.py  _inspect.py
kubertree/auth/: _access.py  _auth.py
kubertree/k8s/: _client.py  _inventory.py  _metrics.py  _models.py  _target.py  _tree.py
kubertree/static/: index.html  style.css
kubertree/tools/: _exec.py  _inspect.py  _nodeops.py  _resources.py  _workload.py
static/: app.js  index.html  style.css
static/js/: actions.js  api.js  explorer.js  format.js  main.js  treemap.js  ui.js
tests/: conftest.py  test_inspect.py  test_inventory.py  test_nodeops.py  test_quantity.py  test_tree.py  test_workload.py
tests/unit/: test_main.py
(+11 files in other folders)
